--- a/01.webpack-base-demo/package.json
+++ b/01.webpack-base-demo/package.json
@@ -18,7 +18,9 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-stage-0": "^7.8.3",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
